--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "burger",
+  "name": "burgers",
   "version": "1.0.0",
   "description": "MySQL, Node, Express, Handlebars and a homemade ORM",
   "main": "server.js",
@@ -12,7 +12,8 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.1",
     "method-override": "^3.0.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "repository": {
