--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
-  "name": "burgers",
+  "name": "burger",
   "version": "1.0.0",
-  "description": "MySQL, Node, Express, Handlebars and a homemade ORM",
+  "description": "Objective: create a burger logger with MySQL, Node, Express, Handlebars and a homemade ORM. Follow the MVC design pattern; use Node and MySQL to query and route data in app, and Handlebars to generate HTML.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "express-handlebars": "^3.0.1",
-    "method-override": "^3.0.0",
-    "mysql": "^2.16.0",
-    "path": "^0.12.7"
-  },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AdmJacobs/burger.git"
@@ -25,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/AdmJacobs/burger/issues"
   },
-  "homepage": "https://github.com/AdmJacobs/burger#readme"
+  "homepage": "https://github.com/AdmJacobs/burger#readme",
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
